# greyd

./: .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  README.md.in  blacklist.c  blacklist.h  con.c  con.h  config.c  config.h  config_lexer.c  config_lexer.h  config_parser.c  config_parser.h  config_section.c  config_section.h  config_source.c  config_source.h  config_value.c  config_value.h  configure  configure.ac  conn.h  constants.h  cscope.files  cscope.out  failures.c  failures.h  firewall.c  firewall.h  grey.c  grey.h  (+40 more)
.github/workflows/: ccpp.yml
check/: Makefile.am  benchmark_blacklist.c  test-mysql.in  test-postgresql.in  test-wrapper.in  test.c  test.h  test_bdb.c  test_blacklist.c  test_con.c  test_config.c  test_config_lexer.c  test_config_parser.c  test_config_section.c  test_config_value.c  test_db.c  test_db_mysql.sh  test_db_postgresql.sh  test_grey.c  test_grey_mysql.sh  test_grey_postgresql.sh  test_greyd_utils.c  test_hash.c  test_ip.c  test_lexer_source.c  test_list.c  test_plugin_framework.c  test_queue.c  test_spamd_lexer.c  test_spamd_parser.c  test_test_framework.c  test_trie.c  test_utils.c
check/data/: config_lexer_test1.conf.in  config_test3.conf.in  lexer_source_1.conf.in  permitted_domains.txt.in
doc/: Makefile.am  greyd-setup.8  greyd-setup.8.html  greyd-setup.8.md  greyd.8  greyd.8.html  greyd.8.md  greyd.conf.5  greyd.conf.5.html  greyd.conf.5.md  greydb.8  greydb.8.html  greydb.8.md  greylogd.8  greylogd.8.html  greylogd.8.md
doc/man/: greyd.8.md
drivers/: Makefile.am  Makefile.in  bdb.c  fw_dummy.c  mysql.c  mysql_schema.sql  netfilter.c  npf.c  pf.c  postgresql.c  postgresql_schema.sql  sqlite.c  sqlite3_schema.sql
etc/: Makefile.am  Makefile.in  greyd.conf.in  greyd.debian-init  greyd.debian-init.in  greyd.docker.conf.in  greyd.redhat-init.in  greylogd.debian-init  greylogd.debian-init.in  greylogd.redhat-init.in
modules/: Makefile  bdb.c  fw_dummy.c  ipset.c  pf.c
plugins/: Makefile.am  guile.c  plugin_dummy.c  spf.c
plugins/guile_scripts/: dnsrbl.scm  test1.scm
src/: Makefile  Makefile.am  Makefile.in  blacklist.c  blacklist.h  con.c  con.h  config.c  config.h  config_lexer.c  config_lexer.h  config_parser.c  config_parser.h  config_section.c  config_section.h  config_value.c  config_value.h  constants.h  events.c  events.h  failures.c  failures.h  firewall.c  firewall.h  grey.c  grey.h  greyd.c  greyd.h  greyd_config.c  greyd_config.h  greydb.c  greydb.h  hash.c  hash.h  ip.c  ip.h  lexer.c  lexer.h  lexer_source.c  lexer_source.h  (+25 more)
src/modules/: Makefile  Makefile.in  bdb.c  fw_dummy.c  ipset.c  netfilter.c
tests/: #test_config_lexer.c#  .#test_config_lexer.c  Makefile  Makefile.in  run_tests.pl  run_tests.pl.in  test.c  test.h  test_bdb.c  test_blacklist.c  test_con.c  test_config.c  test_config_lexer.c  test_config_parser.c  test_config_section.c  test_config_source.c  test_config_value.c  test_grey.c  test_greyd_utils.c  test_hash.c  test_ip.c  test_lexer_source.c  test_list.c  test_queue.c  test_spamd_lexer.c  test_spamd_parser.c  test_test_framework.c  test_utils.c
tests/data/: config_lexer_test1.conf  config_test1.conf  config_test1.conf.in  config_test2.conf  config_test3.conf  lexer_source_1.conf.in  lexer_source_2.conf.gz.in  permitted_domains.txt.in  test_config1.conf
utils/: spf_whitelist.pl
website/: code.php  docs.html  docs.php  downloads.php  footer.php  greyd-setup.8.html  greyd-setup.html  greyd.8.html  greyd.conf.5.html  greyd.conf.html  greyd.html  greydb.8.html  greydb.html  greylogd.8.html  greylogd.html  header.php  index.html  index.php  man.php
website/css/: screen.css
website/js/: site.js
